objects/ssot__ChangeRequestRelatedItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeRequestId__c</fullName>
        <label>Change Request</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestItemImpact__c</fullName>
        <label>Change Request Item Impact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeRequestRelatedItemNumber__c</fullName>
        <label>Change Request Related Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Change Request Related Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceId__c</fullName>
        <label>Related Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceObject__c</fullName>
        <label>Related Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelationshipTypeName__c</fullName>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009449112_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequestRelatedItem_ChangeReque_rel</label>
        <referenceTo>ssot__ChangeRequest__dlm</referenceTo>
        <relationshipLabel>ChangeRequestRelatedItem_ChangeReque_rel</relationshipLabel>
        <relationshipName>rel_1702009449112_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009467588_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequestRelatedItem_RelatedRefe_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>ChangeRequestRelatedItem_RelatedRefe_rel</relationshipLabel>
        <relationshipName>rel_1702009467588_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009499110_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeRequestRelatedItem_RelatedRefe_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ChangeRequestRelatedItem_RelatedRefe_rel</relationshipLabel>
        <relationshipName>rel_1702009499110_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>